--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# IDE/editor settings
+.vscode/
+.idea/
+*.swp
+
+# Node.js (if used later)
+node_modules/
+dist/
 
